<resources>
    <string name="app_name">NekoMediBox</string>
    <string name="text_exception_coroutine" translatable="false">Exception in coroutine: %s</string>
    <string name="text_nfc_failure">Nfc Failure</string>
    <string name="text_exit_app">Exit App</string>
    <string name="text_nfc_state_error">Illegal Nfc State: %s</string>
    <string name="text_tag_not_supported">Tag (%s) Not Supported</string>
    <string name="text_new_tag">Found Tag: %s</string>
    <string name="label_read_box">Read Medication Box Data</string>
    <string name="label_new_box">Create New Medication Box Data</string>
    <string name="label_modify_box">Modify Medication Box Data</string>
    <string name="label_with_heart_and_fishcake" translatable="false">"with ❤️ and 🍥"</string>
    <string name="label_powered_by" translatable="false">Powered by</string>
    <string name="label_medibox">Choose an Option…</string>
    <string name="label_participate_part">Participate Part</string>
    <string name="label_link">Link</string>
    <string name="label_credits">Credits</string>
    <string name="text_waiting_for_tag">Waiting For Tag</string>
    <string name="label_ok">OK</string>
    <string name="text_nfc_io_error">Nfc I/O Error</string>
    <string name="text_nfc_tag_lost">Tag Lost</string>
    <string name="text_reading_tag">Reading MediBox Tag</string>
    <string name="text_version_mismatch">Data Version Mismatch</string>
    <string name="text_version_requirement">Require: %d, Actual: %d</string>
    <string name="text_empty_data">Empty MediBox Data</string>
    <string name="text_invalid_data">Invalid MediBox Data</string>
    <string name="text_data_length_mismatch">Data Length Mismatch</string>
    <string name="text_medicine_not_found">Medicine(s) Not Found\n%s</string>
    <string name="text_mg" translatable="false">%d mg</string>
    <string name="text_one_pill">%d x One Pill</string>
    <string name="text_half_pill">%d x Half Pill</string>
    <string name="text_duration_as_necessary">As Necessary</string>
    <string name="text_once_per_day">Once Per Day</string>
    <string name="text_twice_per_day">Twice Per Day</string>
    <string name="text_third_times_per_day">Third Times Per Day</string>
    <string name="text_quad_times_per_day">Quad Times Per Day</string>
    <string name="text_every_hour">Every Hour</string>
    <string name="text_every_2_hour">Every 2 Hour</string>
    <string name="text_exact_time_before_meals">Before Meals</string>
    <string name="text_exact_time_after_meals">After Meals</string>
    <string name="text_exact_time_morning">Morning</string>
    <string name="text_exact_time_afternoon">Afternoon</string>
    <string name="text_exact_time_every_night">Every Night</string>
    <string name="text_exact_time_before_sleep">Before Sleep</string>
    <string name="text_medicine_not_found_with_usage">Medicine id %d labeled usage as %s was not found in MediBox data</string>
    <string name="label_cancel">Cancel</string>
    <string name="text_medicine_usage">Medicine Usage</string>
    <string name="text_unknown_medicine">Unknown Medicine (%d)</string>
    <string name="label_medicine_usage">Medicine Usage</string>
    <string name="text_rename">Rename…</string>
    <string name="text_empty_medicine_name">Empty medicine name, keep original name unchanged</string>
    <string name="label_medicines">Medicines</string>
    <string name="text_nothing_here">¯\\\\_(ツ)_\/¯\nNothing Here</string>
    <string name="label_next_step">Next Step</string>
    <string name="text_confirm_exit">Confirm Exit</string>
    <string name="empty" />
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="text_add_medicine">Add Medicine</string>
    <string name="text_confirm_remove_medicine">Remove Medicine %s?</string>
    <string name="text_confirm_remove_medicine_usage">Remove Medicine Usage?</string>
    <string name="label_medicine">Medicine</string>
    <string name="label_use_amount">Amount</string>
    <string name="label_order_duration">Order Duration</string>
    <string name="label_exact_order_duration">Exact Order Duration</string>
    <string name="label_done">Done</string>
    <string name="text_none">None</string>
    <string name="text_desc_mg">mg</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_wait">Please Wait...</string>
    <string name="text_generating_data">Generating Tag Data</string>
    <string name="text_determining_blocks">Determining Writable Blocks</string>
    <string name="text_writable_blocks">Writable Blocks: %s</string>
    <string name="text_write_error">Error occurred while writing data:\n%s</string>
    <string name="text_write_block">Writing Block %d</string>
    <string name="text_write_done">Done Writing Data</string>
    <string name="text_check_block">Checking Block: %d</string>
    <string name="text_corrupted_data">Data was written, but following blocks cannot pass data integrity check: %s</string>
    <string name="text_write_success">Data was successfully written</string>
    <string name="text_desc_one_pill">One Pill</string>
    <string name="text_desc_half_pill">Half Pill</string>
</resources>