<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_pill_24"
            app:tint="?colorPrimary"
            android:layout_marginEnd="5dp"/>

        <com.google.android.material.textview.MaterialTextView
            style="?textAppearanceTitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/label_medibox"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_pill_24"
            app:tint="?colorPrimary"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_read"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label_read_box"
            android:textSize="24sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_upload_24"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="10dp"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label_new_box"
            android:textSize="24sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_add_circle_24"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="5dp"
            app:iconSize="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_modify"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label_modify_box"
            android:textSize="24sp"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_edit_24"
            android:layout_marginHorizontal="5dp"
            app:iconSize="24dp" />

        <LinearLayout
            android:id="@+id/text_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="?textAppearanceBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_powered_by" />

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                app:cardCornerRadius="5dp"
                app:strokeWidth="0dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_neko_apps" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                style="?textAppearanceBodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_with_heart_and_fishcake" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>