<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="?dialogPreferredPadding">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_medicine" />

                <Spinner
                    android:id="@+id/medicine_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:choiceMode="singleChoice" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_use_amount" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_use_type"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|start"
                        android:layout_weight="1.5" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:hint="@string/label_use_amount">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_zero"
                            android:inputType="number"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_order_duration" />

                <Spinner
                    android:id="@+id/spinner_order_duration"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:choiceMode="singleChoice" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    style="?textAppearanceTitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_exact_order_duration" />

                <Spinner
                    android:id="@+id/spinner_exact_order_duration"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:choiceMode="singleChoice" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/label_done"
            android:textAppearance="?textAppearanceBodyLarge"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_check_24"
            app:iconGravity="end" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>