<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditMedicinesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            style="?collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?collapsingToolbarLayoutMediumSize"
            android:fitsSystemWindows="false"
            app:collapsedTitleTextColor="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:title="@string/label_medicines"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:titleMarginStart="16dp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?textAppearanceTitleSmall"
        android:text="@string/text_nothing_here"
        android:visibility="visible">

    </TextView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingPrefix">

        <rikka.widget.borderview.BorderNestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:borderBottomVisibility="never"
            app:borderTopDrawable="@null"
            app:borderTopVisibility="whenTop">

            <LinearLayout
                android:id="@+id/medicine_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </rikka.widget.borderview.BorderNestedScrollView>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:padding="12dp">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_add_medicine"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_add_24"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next_step"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            app:cornerRadius="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/label_next_step"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            android:textAppearance="?textAppearanceBodyLarge"
            app:iconGravity="end"
            app:icon="@drawable/ic_arrow_forward_24"/>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>